<resources>
    <string name="app_name">Water OnLine</string>
    <string name="SDZY">手动做样</string>
    <string name="LYCL">零样测量</string>
    <string name="GLCX">管路冲洗</string>
    <string name="SDJZ">手动校准</string>
    <string name="BYCL">标样1测量</string>
    <string name="YBQX">仪表清洗</string>
    <string name="BY2CL">标样2测量</string>
    <string name="CSZY">初始装液</string>
    <string name="ZY">做样</string>
    <string name="XSJZ">稀释校准</string>
    <string name="SDLYCL">手动零样测量</string>
    <string name="SDGLCX">手动管路冲洗</string>
    <string name="SDBYCL">手动标样1测量</string>
    <string name="SDYBQX">手动仪表清洗</string>
    <string name="SDBY2CL">手动标样2测量</string>
    <string name="SDCSZY">手动初始装液</string>
    <string name="SDXSJZ">手动稀释校准</string>
    <string name="SDLDHC">手动零点核查</string>
    <string name="SDKDHC">手动跨度核查</string>
    <string name="SDJBHS">手动加标回收</string>
    <string name="SDPXY">手动平行样</string>
    <string name="SDBYHC">手动标样核查</string>
    <string name="SDB1">手动标1</string>
    <string name="SDB2">手动标2</string>
    <string name="SDB3">手动标3</string>
    <string name="SDB4">手动标4</string>
    <string name="SDGYWDX">手动光源稳定性</string>
    <string name="SDJYWDX">手动进样稳定性</string>
    <string name="SDCHJZS">手动催化剂再生</string>
    <string name="LDHC">零点核查</string>
    <string name="KDHC">跨度核查</string>
    <string name="JBHS">加标回收</string>
    <string name="PXY">平行样</string>
    <string name="BYHC">标样核查</string>
    <string name="B1">标1</string>
    <string name="B2">标2</string>
    <string name="B3">标3</string>
    <string name="B4">标4</string>
    <string name="JZ">校准</string>
    <string name="GYWDX">光源稳定性</string>
    <string name="JYWDX">进样稳定性</string>
    <string name="CHJZS">催化剂再生</string>
    <string name="tankTemperature">水箱温度</string>
    <string name="meterBoxTemperature">仪表箱温度</string>
    <string name="unitT">℃</string>
    <string name="unitHour">时</string>
    <string name="unitMin">分</string>
    <string name="unitSec">秒</string>
    <string name="unitMl">ml</string>
    <string name="unitMl_Min">ml/min</string>
    <string name="autoJob">自动做样</string>
    <string name="displayAutoJob">自动做样</string>
    <string name="displayManualJob">手动做样</string>
    <string name="continuousMea">连续测量</string>
    <string name="cycleMea">周期测量</string>
    <string name="intervalTime">间隔</string>
    <string name="startTime">启动时间</string>
    <string name="devProtectTile">水质分析仪售后服务信息</string>
    <string name="beforeMeaData">上次测量值</string>
    <string name="Pressure_CorrK">压力校正系数K</string>
    <string name="Pressure_CorrB">压力校正系数B</string>
    <string-array name="runningMode">
        <item>在线</item>
        <item>离线</item>
        <item>维护</item>
    </string-array>
    <string-array name="meaMode">
        <item>连续模式</item>
        <item>周期模式</item>
        <item>定点模式</item>
        <item>受控模式</item>
        <item>手动模式</item>
    </string-array>
    <string name="name">名称</string>
    <string-array name="jdqpz">
        <item>未配置</item>
        <item>均质预处理</item>
        <item>上下限R1</item>
        <item>开采样R2</item>
    </string-array>
    <string-array name="sampleSystem">
        <item>采样系统A</item>
        <item>采样系统B</item>
        <item>采样系统C</item>
    </string-array>
    <string-array name="operatingDevice">
        <item>无反控</item>
        <item>采样器</item>
        <item>流量计</item>
        <item>PH</item>
    </string-array>
    <string name="channel">通道</string>
    <string-array name="flowMeter">
        <item>无</item>
        <item>m³/h</item>
        <item>L/min</item>
        <item>L/S</item>
    </string-array>
    <string name="reserve">保留</string>
    <string-array name="cldw">
        <item>mg/L</item>
        <item>μg/L</item>
        <item>ppm</item>
        <item>ppb</item>
        <item>%</item>
    </string-array>
    <string-array name="cldw_swdx">
        <item>%</item>
    </string-array>
    <string-array name="cldw2">
        <item>mg/L</item>
        <item>μg/L</item>
        <item>ppm</item>
        <item>ppb</item>
        <item>NTU</item>
    </string-array>
    <string-array name="baud">
        <item>2400bps</item>
        <item>9600bps</item>
        <item>14400bps</item>
        <item>19200bps</item>
        <item>38400bps</item>
        <item>56000bps</item>
        <item>57600bps</item>
        <item>115200bps</item>
    </string-array>
    <string-array name="Gain">
        <item>未选择</item>
        <item>通道_1</item>
        <item>通道_2</item>
        <item>通道_3</item>
        <item>通道_4</item>
    </string-array>
    <string name="flow">流程</string>
    <string-array name="strComponents">
        <item>CODcr</item>
        <item>NH3N</item>
        <item>TP</item>
        <item>TN</item>
        <item>Cr6+</item>
        <item>TCr</item>
        <item>TPb</item>
        <item>CN</item>
        <item>SYSN</item>
        <item>TCu</item>
        <item>AS</item>
        <item>TNi</item>
    </string-array>
    <string-array name="strZHCS">
        <item>做样</item>
        <item>零样测量</item>
        <item>管路冲洗</item>
        <item>校准</item>
        <item>标样1测量</item>
        <item>仪表清洗</item>
        <item>初始装液</item>
        <item>标样2测量</item>
        <item>光源稳定性</item>
        <item>进样稳定性</item>
    </string-array>
    <string-array name="strDDCL">
        <item>做样</item>
        <item>零样测量</item>
        <item>标样1测量</item>
        <item>标样2测量</item>
        <item>零点核查</item>
        <item>跨度核查</item>
        <item>标样核查</item>
        <item>平行样</item>
        <item>加标回收</item>
    </string-array>
    <string-array name="strDDCL2">
        <item>未选择</item>
        <item>做样</item>
        <item>零样测量</item>
        <item>标样1测量</item>
        <item>标样2测量</item>
        <item>零点核查</item>
        <item>跨度核查</item>
        <item>标样核查</item>
        <item>平行样</item>
        <item>加标回收</item>
    </string-array>
    <string-array name="xsbaseRange">
        <item>量程_1</item>
        <item>量程_2</item>
    </string-array>
    <string name="range">量程</string>
    <string name="waiting_for_instructions">等待指令</string>
    <string name="ready">准备</string>
    <string name="normal">正常</string>
    <string name="span_1">标1</string>
    <string name="span_2">标2</string>
    <string name="measure">测量</string>
    <string name="realTime">实时</string>
    <string name="infusionTest">抽液测试</string>
    <string name="drainageTest">排液测试</string>
    <string-array name="dilutionMode">
        <item>模式—</item>
        <item>模式二</item>
        <item>模式三</item>
    </string-array>
    <string name="measureLimit">测量指标超</string>
    <string name="error">错误</string>
    <string name="warning">警告</string>
    <string name="tip_login">登录</string>
    <string name="tip_run">运维</string>
    <string name="tip_other">其他</string>
    <string name="selfCheck">自检中</string>
    <string name="clean">清洗</string>
    <string name="exceptionHandling">异常处理</string>
    <string name="exceptionHandling2">异常处理2</string>
    <string name="dilutionCal">稀释校准</string>
    <string name="FlowingNumberSupermax">流程编号不能超过62</string>
    <string name="sendFlowing">正为您下发流程…</string>
    <string name="sendFlowError">流程下发异常，请检查设备!</string>
    <string name="sendFlowSucceed">流程下发已完成，建议您10秒后重启确认!</string>
    <string name="sendFlowCrcFail">流程验证失败，请尝试重发!</string>
    <string name="flowCrcFuncFail">流程验证功能不可用，建议升级核心控制板软件!</string>
    <string name="locFlowCrc">本地校验</string>
    <string name="recFlowCrc">接收校验</string>
    <string name="readyStarted">准备开始_</string>
    <string name="pleaseWaiting">请等待…</string>
    <string name="digestionTemper">消解温度</string>
    <string name="digestionTimer">消解时长</string>
    <string name="colorTemper">显色温度</string>
    <string name="colorTimer">显色时长</string>
    <string name="dispellingCooling">消解降温</string>
    <string name="colorCooling">显色降温</string>
    <string name="colorStand">显色静置</string>
    <string name="waitingStand">等待静置</string>
    <string name="distillTubeTemper">蒸馏管温度</string>
    <string name="distillTimer">蒸馏时长</string>
    <string name="calibrationDigestionTempe">校准消解温度</string>
    <string name="calibrationDigestionTime">校准消解时长</string>
    <string name="waterVolume">水样体积</string>
    <string name="oxidantVolume">氧化剂体积</string>
    <string name="reductantVolume">还原剂体积</string>
    <string name="reductantCoc">还原剂浓度</string>
    <string name="titrationVolume">滴定液体积</string>
    <string name="catalystVolume">催化剂体积</string>
    <string name="bufferVolume">缓冲剂体积</string>
    <string name="reagentVolume">显色剂体积</string>
    <string name="bufferRinseVolume">缓冲剂冲洗体积</string>
    <string name="reagentRinseVolume">显色剂冲洗体积</string>
    <string name="catalystRinseVolume">催化剂冲洗体积</string>
    <string name="distill_temper_is_set_error">设置的蒸馏温度有误</string>
    <string name="distill_temper_is_empty">设置的蒸馏温度不能为空</string>
    <string name="distill_timer_is_set_error">设置的蒸馏时长有误</string>
    <string name="distill_timer_is_empty">设置的蒸馏时长不能为空</string>
    <string name="digestion_temper_is_set_error">设置的消解温度有误</string>
    <string name="digestion_temper_is_empty">设置的消解温度不能为空</string>
    <string name="digestion_timer_is_set_error">设置的消解时长有误</string>
    <string name="digestion_timer_is_empty">设置的消解时长不能为空</string>
    <string name="color_temper_is_set_error">设置的显色温度有误</string>
    <string name="color_temper_is_empty">设置的显色温度不能为空</string>
    <string name="color_timer_is_set_error">设置的显色时长有误</string>
    <string name="color_timer_is_empty">设置的显色时长不能为空</string>
    <string name="dispelling_cooling_is_set_error">设置的消解降温有误</string>
    <string name="dispelling_cooling_is_empty">设置的消解降温不能为空</string>
    <string name="color_cooling_is_set_error">设置的显色降温有误</string>
    <string name="color_cooling_is_empty">设置的显色降温不能为空</string>
    <string name="color_stand_is_set_error">设置的显色静置有误</string>
    <string name="color_stand_is_empty">设置的显色静置不能为空</string>
    <string name="set_meaPar">设置的</string>
    <string name="is_set_empty">不能为空</string>
    <string name="is_set_error">有误</string>
    <string name="wait_stand_is_set_error">设置的等待静置有误</string>
    <string name="wait_stand_is_empty">设置的等待静置不能为空</string>
    <string name="burning_temperature_is_set_error">设置的燃烧温度有误</string>
    <string name="burning_temperature_is_empty">设置的燃烧温度不能为空</string>
    <string name="titration_volume_is_set_error">设置的滴定液体积有误</string>
    <string name="titration_volume_is_empty">设置的滴定液体积不能为空</string>
    <string name="reductant_coc_is_set_error">设置的还原剂浓度有误</string>
    <string name="reductant_coc_is_empty">设置的还原剂浓度不能为空</string>
    <string name="measurement_value">测量值</string>
    <string name="cancel">取消</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="sure">确定</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="sign">标识</string>
    <string name="read">读取</string>
    <string name="setting">设置</string>
    <string name="synchronization">同步</string>
    <string name="query">查询</string>
    <string name="device_info">水质分析仪信息</string>
    <string name="restore_factory_set">恢复出厂设置</string>
    <string name="set_factory_set">设置出厂设置</string>
    <string name="calibration_data_empty">清空校准记录</string>
    <string name="running_data_empty">清空运行记录</string>
    <string name="first_page">首页</string>
    <string name="before_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="tail_page">尾页</string>
    <string name="export">导出</string>
    <string name="Homing_peak">自动寻峰</string>
    <string name="turbidityCom">浊度补偿</string>
    <string name="version">文件版本</string>
    <string name="oneKeyCal">多量程校准</string>
    <string name="displayKDHCSetting">跨度核查设置</string>
    <string name="flowCfgSetting">流程配置</string>
    <string name="updateConfig">更新配置文件</string>
    <string name="upgradeBoard">软件烧写</string>
    <string name="datarecovery">数据恢复</string>
    <string name="directoryLook">动作耗时</string>
</resources>