<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/soft_bj"
              android:orientation="vertical">

        <ListView
            android:id="@+id/listview"
            android:layout_width="790px"
            android:layout_height="370px"
            android:layout_marginLeft="25px"
            android:layout_marginTop="30px"
            android:textColor="@android:color/white"
            android:textSize="18px"/>

        <LinearLayout
            android:layout_width="790px"
            android:layout_height="50px"
            android:layout_marginLeft="20px"
            android:layout_marginTop="10px"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Btn_firstPage"
                style="@style/CButton_Dialog"
                android:layout_marginLeft="30px"
                android:text="@string/first_page" />

            <Button
                android:id="@+id/Btn_lastPage"
                style="@style/CButton_Dialog"
                android:layout_marginLeft="30px"
                android:text="@string/before_page" />

            <Button
                android:id="@+id/Btn_nextPage"
                style="@style/CButton_Dialog"
                android:layout_marginLeft="30px"
                android:text="@string/next_page" />

            <Button
                android:id="@+id/Btn_tailPage"
                style="@style/CButton_Dialog"
                android:layout_marginLeft="30px"
                android:text="@string/tail_page" />
            <Button
                android:id="@+id/Btn_history_select"
                style="@style/CButton_Dialog"
                android:layout_marginLeft="30px"
                android:text="@string/query" />
            <Button
                android:id="@+id/Btn_export"
                style="@style/CButton_Dialog"
                android:layout_marginLeft="30px"
                android:text="@string/export" />

        </LinearLayout>


</LinearLayout>
